--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "*",
     "connect-flash": "*",
     "cookie-parser": "^1.4.1",
+    "csurf": "^1.9.0",
     "express": "*",
     "express-handlebars": "*",
     "express-messages": "*",
